tests/invalid_typecheck/test_tc_unknown_in_expr.aphi
/*
Type-check error: Unknown identifier 'y'.
Uses an undeclared variable in the right-hand side of an assignment.
*/

int x;

procedure main {
    x = y;
}
